--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
 #     environment:
 #       - NEZHAAGENT=de2e65cb080ec0a2a4
 #       - NGROKSSH=1
-  web:
+  web1:
     build: .
     ports:
       - "81:80"
