--- a/x-ui/nginx.conf
+++ b/x-ui/nginx.conf
@@ -45,93 +45,37 @@ http {
     server_tokens off;
     access_log off;
 
-    upstream vlessws {
-        server 192.168.198.105:36894;
-    }
-
-    upstream vmessws {
-        server 192.168.198.105:36895;
-    }
 
     server {
-        listen *:80;
-        listen 443 ssl http2;
-        server_name localhost;
+       listen       80;
+       listen  [::]:80;
+       server_name  localhost;
 
         #charset koi8-r;
-
-        #HTTP_TO_HTTPS_END
-        ssl_certificate cert/4150123.eu.org.cer;
-        ssl_certificate_key cert/4150123.eu.org.key;
-        ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
-        ssl_ciphers EECDH+CHACHA20:EECDH+CHACHA20-draft:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
-        ssl_prefer_server_ciphers on;
-        ssl_session_cache shared:SSL:10m;
-        ssl_session_timeout 10m;
-        add_header Strict-Transport-Security "max-age=31536000";
-        error_page 497 https://$host$request_uri;
-        #SSL-END
-        #向后端传递访客IP
-       proxy_http_version 1.1;
-       proxy_set_header Upgrade $http_upgrade;
-       proxy_set_header Connection "upgrade";
-       proxy_set_header Host $http_host;
-       proxy_set_header X-Real-IP $remote_addr;
-       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
         #access_log  logs/host.access.log  main;
 
         location / {
-            root /usr/share/nginx/html;
-            index index.html index.htm;
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
+        }
+    
+        location  /xray/  {
+            proxy_pass http://127.0.0.1:54321/xray/;
         }
 
-        location /docker/ {
-            proxy_pass http://192.168.198.102:9000/;
+        location /hello2021 {
+            proxy_redirect off;
+            proxy_pass http://127.0.0.1:36894;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $http_host;
+            proxy_read_timeout 300s;
+            # Show realip in v2ray access.log
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
-
-        location /xray/ {
-            proxy_pass http://192.168.198.105:54321/xray/;
-        }
-        location /rootService {
-        client_max_body_size 0;
-        keepalive_time 10719064m;
-        keepalive_requests 42949672;
-        client_body_timeout 10719064m;
-        send_timeout 10719064m;
-        lingering_close always;
-        grpc_read_timeout 10719064m;
-        grpc_send_timeout 10719064m;
-        grpc_pass grpc://192.168.198.105:25169;
-    }
-
-    location /hello2021 {
-        proxy_redirect off;
-        proxy_pass http://vlessws;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $http_host;
-        proxy_read_timeout 300s;
-        # Show realip in v2ray access.log
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    location /hellovmess {
-        proxy_redirect off;
-        proxy_pass http://vmessws;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $http_host;
-        proxy_read_timeout 300s;
-        # Show realip in v2ray access.log
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-
         #error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
